WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
REOPENED
147251
[iOS] REGRESSION (187131): Loading CuteOverload zooms in to the top left corner.
https://bugs.webkit.org/show_bug.cgi?id=147251
Summary
[iOS] REGRESSION (187131): Loading CuteOverload zooms in to the top left corner.
alan
Reported
2015-07-23 19:47:17 PDT
1. Load cuteoverload.com 2. Page zooms in to the top left corner.
Attachments
Patch
(2.39 KB, patch)
2015-07-23 19:51 PDT
,
alan
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
alan
Comment 1
2015-07-23 19:47:42 PDT
rdar://problem/21953359
alan
Comment 2
2015-07-23 19:51:39 PDT
Created
attachment 257423
[details]
Patch
Benjamin Poulain
Comment 3
2015-07-23 19:56:32 PDT
Comment on
attachment 257423
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=257423&action=review
> Source/WebKit2/ChangeLog:8 > + Calling zoomToRect() should result in essentially the same zoom scale as if we > + called setZoomScale with the new page scale factor.
I would prefer a complete explanation of what is the expected rect here. This is a stupid bug on top of an other stupid bug. Someone will want to understand why that code exist at all at some point in the future.
WebKit Commit Bot
Comment 4
2015-07-23 21:17:23 PDT
Comment on
attachment 257423
[details]
Patch Clearing flags on attachment: 257423 Committed
r187286
: <
http://trac.webkit.org/changeset/187286
>
WebKit Commit Bot
Comment 5
2015-07-23 21:17:26 PDT
All reviewed patches have been landed. Closing bug.
WebKit Commit Bot
Comment 6
2015-08-10 13:32:50 PDT
Re-opened since this is blocked by
bug 147839
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug