[iOS] REGRESSION (187131): Loading CuteOverload zooms in to the top left corner. https://bugs.webkit.org/show_bug.cgi?id=147251 rdar://problem/21953359

Calling zoomToRect() should result in essentially the same zoom scale as if we
called setZoomScale with the new page scale factor.

Reviewed by Benjamin Poulain.

* UIProcess/API/Cocoa/WKWebView.mm:
(-[WKWebView _didCommitLayerTree:]):


Canonical link: https://commits.webkit.org/165333@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@187286 268f45cc-cd09-0410-ab3c-d52691b4dbfc